# cuda_test_nolibigl

./: CMakeLists.txt  README.md  compile.ps1  run.ps1
src/: includes.h
